<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/LinearLayout1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/darkgray"
              android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@color/blue"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/menu_right_margin"
            android:paddingTop="@dimen/menu_vertical_margin"
            android:paddingBottom="@dimen/menu_vertical_margin"
            android:layout_alignParentBottom="true">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_about"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:textColor="@color/gold"
            android:layout_weight="6"/>
    <Button
            android:layout_width="@dimen/menu_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:id="@+id/menuBtn"
            android:onClick="goToMenu"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"/>
        </LinearLayout>

    <TextView
        android:id="@+id/textViewBased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/based"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ian"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />



<TextView
        android:id="@+id/textTeamMbr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harry"
        android:layout_gravity="center"
        android:paddingTop="@dimen/names_top"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
        android:id="@+id/textTeamMbr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foggy"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/names_btm"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>