<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/darkgray"
              android:paddingBottom="@dimen/login_spacing">

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@color/blue"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/menu_right_margin"
            android:paddingTop="@dimen/menu_vertical_margin"
            android:paddingBottom="@dimen/menu_vertical_margin"
            android:layout_alignParentBottom="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:textColor="@color/gold"
                android:layout_weight="6"/>
        <Button
                android:layout_width="@dimen/menu_btn_width"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:id="@+id/menuBtn"
                android:onClick="goToMenu"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"/>
        </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textView"
            android:layout_gravity="center"/>


    <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_button_text"
            android:onClick="performLogin" />

</LinearLayout>